--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <style>
+      ::-webkit-scrollbar{width:6px;height:10px;border-radius:10px;background-color:#f9f9f9;visibility:hidden}:hover::-webkit-scrollbar{width:6px;height:10px;visibility:visible}::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#c6cacd;transition:.3s ease-in-out;visibility:hidden}:hover::-webkit-scrollbar-thumb{visibility:visible}
+    </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
