style:优化滚动条样式- 调整滚动条背景色为透明，提升视觉效果- 修改滚动条 thumb 部分的颜色和阴影，使其更柔和

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
       content="Web site created using create-react-app"
     />
     <style>
-      ::-webkit-scrollbar{width:6px;height:10px;border-radius:10px;background-color:#f9f9f9;visibility:hidden}:hover::-webkit-scrollbar{width:6px;height:10px;visibility:visible}::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0,0,0,.3);background-color:#c6cacd;transition:.3s ease-in-out;visibility:hidden}:hover::-webkit-scrollbar-thumb{visibility:visible}
+      ::-webkit-scrollbar{width:6px;height:10px;border-radius:10px;background-color:#f9f9f900;visibility:hidden}:hover::-webkit-scrollbar{width:6px;height:10px;visibility:visible}::-webkit-scrollbar-thumb{border-radius:10px;-webkit-box-shadow:inset 0 0 6px rgba(0, 0, 0, 0.164);background-color:#e0e0e000;transition:.3s ease-in-out;visibility:hidden}:hover::-webkit-scrollbar-thumb{visibility:visible}
     </style>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>微信小助手</title>
